2008-10-29       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  fixed bug in
	  DeclareDefaultType which caused a segfault when using
	  BITSET8, BITSET16, BITSET32 (reported by Scott Iverson).
	  The set type was incorrectly declared as a subrange.
	* gm2/gm2-compiler/SymbolTable.mod:  tidied up more
	  error messages.
	* gm2/gm2-compiler/M2Quads.mod:  moved the assignment
	  check after the BecomesOp, to ensure that during
	  code generation we can check the types after a
	  constant designator has been resolved.

2008-10-28       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  BuildArrayStringConstructor (new function).
	* gm2/gm2-compiler/M2GenGCC.mod:  DoCopyString remove
	  redundant parameter.  BuildReturnValue check to see whether
	  we are returning a constant string and if so call
	  BuildArrayStringConstructor.
	* gm2/gm2-compiler/M2LexBuf.mod:  add Assert to ensure
	  that the CurrentTokeNo>=ListOfTokens.LastBucketOffset.
	* gm2/gm2-compiler/M2Quads.mod:  revoke yesterdays
	  changes to this file in an attempt to allow GM2/GCC
	  to propagate the constant string further.
	* gm2/gm2-compiler/gccgm2.def:  add
	  BuildArrayStringConstructor to definition module.
	* gm2/gm2-compiler/M2LexBuf.mod:  UpdateFromBucket (new
	  function).  GetToken uses UpdateFromBucket and fixes
	  a buffer overrun bug reported by Scott Robinson.

2008-10-27       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Quads.mod:  modified BuildReturn
	  so that string constants can be returned from
	  functions with static array return types.
	* testsuite/gm2/pim/pass/testreturnstr.mod:  (new file).
	* testsuite/gm2/pim/run/pass/testreturnstr.mod:  (new file).
	* testsuite/gm2/pim/run/pass/testreturnstr2.mod:  (new file).

2008-10-26       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/LongMath.mod:  tidied up comments.
	* gm2/gm2-libs-iso/README.texi:  brought list of
	  completed ISO modules up to date.
	* gm2/NEWS:  document 0.68 changes in readiness