@@ -340,9 +340,9 @@ gm2.install-common: installdirs \
             toolbase=`basename $$tool` ; \
             tool_transformed_name=`echo $$toolbase|sed '$(program_transform_name)'`; \
             if [ -f $$tool ]; then \
-              rm -f $(DESTDIR)$(bindir)/$$tool_transformed_name$(exeext); \
-              $(INSTALL_PROGRAM) $$tool $(DESTDIR)$(libsubdir)/$$tool_transformed_name$(exeext); \
-              chmod a+x $(DESTDIR)$(libsubdir)/$$tool_transformed_name$(exeext); \
+              rm -f $(DESTDIR)$(bindir)/$$tool_transformed_name; \
+              $(INSTALL_PROGRAM) $$tool $(DESTDIR)$(libsubdir)/$$tool_transformed_name; \
+              chmod a+x $(DESTDIR)$(libsubdir)/$$tool_transformed_name; \
             else \
               echo "odd cannot find $$tool" ; \
             fi ; \
@@ -352,9 +352,9 @@ gm2.install-common: installdirs \
           toolbase=`basename $$tool` ; \
           tool_transformed_name=`echo $$toolbase|sed '$(program_transform_name)'`; \
           if [ -f $$tool$(exeext) ]; then \
-            rm -f $(DESTDIR)$(bindir)/$$tool_transformed_name$(exeext); \
-            $(INSTALL_PROGRAM) $$tool$(exeext) $(DESTDIR)$(bindir)/$$tool_transformed_name$(exeext); \
-            chmod a+x $(DESTDIR)$(bindir)/$$tool_transformed_name$(exeext); \
+            rm -f $(DESTDIR)$(bindir)/$$tool_transformed_name; \
+            $(INSTALL_PROGRAM) $$tool$(exeext) $(DESTDIR)$(bindir)/$$tool_transformed_name; \
+            chmod a+x $(DESTDIR)$(bindir)/$$tool_transformed_name; \
           fi ; \
         done ; \
 	for i in $(srcdir)/gm2/gm2-libs/*.def $(srcdir)/gm2/gm2-libs/*.mod ; do \
