@@ -1,3 +1,11 @@
+2008-11-02       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2/Make-lang.in:  removed $(exeext) from all
+	  transformed names.
+	* gm2/gm2/gm2spec.c:  append libraries at the end of the
+	  command line rather than at the beginning.  Only add
+	  -lgcc_eh if ENABLE_SHARED_LIBGCC is defined.
+	
 2008-10-29       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-compiler/M2GCCDeclare.mod:  fixed bug in
